Add link to Midterm Prep App

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wai Yan Paing-6511171</title> 
+    <title>Wai Yan Paing - 6511171</title> 
   </head>
   <body>
     <h1>Hello, I'm Wai Yan Paing. ID-6511171</h1> 
+
+    <p>
+      <a href="midterm-prep-build/">Go to Midterm Prep App</a>
+    </p>
   </body>
-</html> 
+</html>
