Fix vite base path for midterm-prep1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <p>
       <a href="midterm-prep-build/">Go to Midterm Prep App</a>
+      <a href="midterm-prep1-build/">Go to Midterm Prep 1 App</a>
     </p>
   </body>
 </html>
