Update homepage with buttons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,33 @@
 <html>
   <head>
     <title>Wai Yan Paing - 6511171</title> 
+    <style>
+      body {
+        font-family: sans-serif;
+        text-align: center;
+        padding: 40px;
+      }
+
+      h1 {
+        margin-bottom: 30px;
+      }
+
+      a {
+        display: inline-block;
+        margin: 10px;
+        padding: 12px 20px;
+        background-color: #007acc;
+        color: white;
+        text-decoration: none;
+        border-radius: 6px;
+        font-weight: bold;
+        transition: background-color 0.3s;
+      }
+
+      a:hover {
+        background-color: #005fa3;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello, I'm Wai Yan Paing. ID-6511171</h1> 
