Midterm Exam Quotation App

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <h1>Hello, I'm Wai Yan Paing. ID-6511171</h1> 
 
     <p>
-      <a href="midterm-prep-build/">Go to Midterm Prep App</a>
-      <a href="midterm-prep1-build/">Go to Midterm Prep 1 App</a>
+      <a href="midterm-prep-build/">Practice-1</a>
+      <!-- <a href="midterm-prep1-build/">Go to Midterm Prep 1 App</a> -->
+      <a href="midterm-quotation-app/">Go to Midterm Quotation App</a>
     </p>
   </body>
 </html>
