--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>
       <a href="midterm-prep-build/">Practice-1</a>
       <a href="midterm-prep1-build/">Go to Midterm Prep 1 App</a>
-      <a href="midterm-quotation-app/">Go to Midterm Quotation App</a>
+      <a href="midterm-quotation-app-build/">Go to Midterm Quotation App</a>
     </p>
   </body>
 </html>
