Deploy Spending Tracker build and add homepage link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h2>Midterm Prep 1 App</h2>
           <div class="badges"><span class="badge">Practice</span><span class="badge">React • Vite</span></div>
           <p class="desc">A small React/Vite exercise focusing on component structure, props, and basic state before the midterm.</p>
-          <div class="card-footer"><div class="card-footer"><div class="divider"></div><div class="actions"><a class="btn" href="midterm-quotation-app-build/">View Project</a></div></div></div>
+          <div class="card-footer"><div class="card-footer"><div class="divider"></div><div class="actions"><a class="btn" href="SpendingTracker-main/">View Project</a></div></div></div>
         </article>
 
         <article class="card">
