Deploy React Calculator build

--- a/index.html
+++ b/index.html
@@ -58,9 +58,16 @@
 
       <section class="projects">
         <article class="card">
-          <h2>Midterm Prep 1 App</h2>
-          <div class="badges"><span class="badge">Practice</span><span class="badge">React • Vite</span></div>
-          <p class="desc">A small React/Vite exercise focusing on component structure, props, and basic state before the midterm.</p>
+          <h2>React Calculator</h2>
+          <div class="badges"><span class="badge">CSX4107/ITX4107</span><span class="badge">Classwork</span><span class="badge">React • Vite</span></div>
+          <p class="desc">Single-page calculator that adds a <strong>Discount</strong> number input and computes VAT <code>vat = (price - discount) × 0.07</code>. Styled UI, configured base path, built with Vite, and deployed to GitHub Pages (static artefact: HTML/CSS/JS).</p>
+          <div class="card-footer"><div class="card-footer"><div class="divider"></div><div class="actions"><a class="btn" href="react-calculator-build/">View Project</a></div></div></div>
+        </article>
+
+        <article class="card">
+          <h2>Spending Tracker</h2>
+          <div class="badges"><span class="badge">CSX4107/ITX4107</span><span class="badge">Project 1</span><span class="badge">React • Vite</span></div>
+          <p class="desc">Two-page app: Analytics Dashboard (daily/weekly/monthly totals, line & pie charts) and Journal for entries (date, category, amount). Supports custom categories; data persists in localStorage (no backend).</p>
           <div class="card-footer"><div class="card-footer"><div class="divider"></div><div class="actions"><a class="btn" href="SpendingTracker-main-build/">View Project</a></div></div></div>
         </article>
 
